--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/asfopoo/karaokeWeb#readme",
   "dependencies": {
-    "clusterize.js": "^0.18.1"
+    "clusterize.js": "^0.18.1",
+    "jquery": "^3.4.1"
   }
 }
